name:                stack-run
version:             0.1.1.4
synopsis:            An equivalent to cabal run for stack.
description:         Finds the project root, compiles your code and runs the
                     first or set default executable. It's a shorthand for
                     @stack build && stack run executable@, much like
                     @cabal run@.
homepage:            https://github.com/yamadapc/stack-run
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (c) 2016 Pedro Tacla Yamada
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

tested-with: GHC >= 7.6

executable stack-run
  main-is:             Main.hs
  build-depends:       Cabal
                     , terminal-size
                     , stm
                     , MissingH
                     , ansi-terminal >= 0.6
                     , async
                     , base >=4 && <5
                     , bytestring >= 0.10
                     , conduit > 1.1 && < 1.3
                     , conduit-extra >= 1.1 && < 1.2
                     , directory
                     , filepath
                     , time >= 1.5.0.1
  if os(windows)
    CPP-Options:      -DOS_Win32
    hs-source-dirs:
      src
  if ! os(windows)
    other-modules: System.Console.Questioner
                 , System.Console.Questioner.Autocomplete
                 , System.Console.Questioner.ProgressIndicators
                 , System.Console.Questioner.Util
    build-depends:     vty
    hs-source-dirs:
      src
      unix
  default-language:    Haskell2010
  ghc-options:       -threaded

source-repository head
  type:     git
  location: git://github.com/yamadapc/stack-run.git
